--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,5 +1,10 @@
 @import url(http://fonts.googleapis.com/css?family=Exo);
 
+body {
+  background: url('bg.png');
+  font-family: Constantia, "Lucida Bright", Lucidabright, "Lucida Serif", Lucida, "DejaVu Serif", "Bitstream Vera Serif", "Liberation Serif", Georgia, serif;
+}
+
 .navbar .navbar-brand {
   color: #e89669;
   font-family: 'Exo', sans-serif;
