--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -3,6 +3,7 @@
 body {
   background: url('bg.png');
   font-family: Constantia, "Lucida Bright", Lucidabright, "Lucida Serif", Lucida, "DejaVu Serif", "Bitstream Vera Serif", "Liberation Serif", Georgia, serif;
+  padding-top: 60px;
 }
 
 .navbar .navbar-brand {
@@ -61,4 +62,12 @@ h1, h2, h3, h4, h5, h6, .navbar {
 
 .clr {
   clear:both;
+}
+
+.field_with_errors {
+  color: #ff3333;
+  background-color: #FFEEEE;
+  border-radius: 3px;
+  padding:8px;
+  margin:10px;
 }
