--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -95,3 +95,45 @@ h1, h2, h3, h4, h5, h6, .navbar {
   font-weight: 100;
   font-size:25px;
 }
+
+ul {
+      list-style-type: none;
+}
+
+ul .header {
+  font-size:25px;
+}
+
+ul .header .glyphicon {
+  font-size:20px;
+}
+
+.iconbox{
+  padding-top: 10px;
+}
+
+.section-li {
+  border: 1px solid;
+  border-color: black;
+  padding: 20px;
+  margin:20px;
+}
+
+.lessons li {
+  background:black;
+  color:white;
+  margin: 10px;
+  font-family: "Helvetica Neue", Helvetica;
+  font-weight: 100;
+  padding: 8px;
+  font-size:15px;
+}
+
+.lessons li b {
+  font-size:25px;
+  font-weight: 100;
+}
+
+.lessons li p {
+  margin:0;
+}
