added social icons

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -83,11 +83,9 @@
       <div class="col-xs-12 col-sm-3">
         <b>Contact</b>
         <br />
-        ken@thefirehoseproject.com
+        george@gwelsted.com
         <br />
-        One Kendall Square
-        <br />
-        Cambridge MA, 02113
+        gwelsted.com
       </div>
       <div class="col-xs-12 col-sm-3 social">
         <b>Social</b>
