--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the static_pages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.features {
+	height: 300px;
+	background-color: #fff;
+}
+
+.features h3 {
+	padding-top: 15px;
+	padding-bottom: 15px;
+	border-bottom: solid 2px #ccc;
+}
