--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -8,7 +8,7 @@
     </h3>
 
     <br />
-    <%= image_tag course.image, :class => 'img-responsive' %>
+    <%= image_tag course.image_name, :class => 'img-responsive' %>
     <br />
     <div class="col-xs-12 col-sm-8">
       <%= course.description %>
@@ -26,7 +26,7 @@
       <%= link_to course.title, course_path(course) %>
   	</h3>
 	<br />
-    <%= image_tag course.image, :class => 'img-responsive' %>
+    <%= image_tag course.image_name, :class => 'img-responsive' %>
     <br />
     <div class="col-xs-12 col-sm-8">
       <%= course.description %>
