--- a/app/views/instructor/courses/new.html.erb
+++ b/app/views/instructor/courses/new.html.erb
@@ -5,7 +5,7 @@
   <%= f.input :title %>
   <%= f.input :description %>
   <%= f.input :cost %>
-  <%= f.input :image %>
+  <%= f.input :image_name %>
   <br />
   <%= f.submit "Create", :class => 'btn btn-primary' %>
   <br />
