Added team page removed xtra links

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -74,9 +74,7 @@
       <div class="col-xs-12 col-sm-3">
         <b>About</b>
         <br />
-        <%= link_to 'Team', '#' %>
-        <br />
-        <%= link_to 'Careers', '#' %>
+        <%= link_to 'Team', team_path %>
         <br />
         <%= link_to 'Privacy Policy', privacy_path %>
       </div>
